--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">Algorítmos para manipulação de LR</h1>
-      <h2 class="project-tagline">Documentação do projeto da disciplina de Ling Formais e Compiladores 2018.2</h2>
+      <h1 class="project-name">Algoritmos para manipulação de LR</h1>
+      <h2 class="project-tagline">Documentação do projeto da disciplina de Linguagens Formais e Compiladores 2018.2</h2>
       {% if site.show_downloads %}
 	<a href="" class="btn">Github .com</a>
         <a href="" class="btn">Download .zip</a>
