fix labels layout inicial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">Algoritmos para manipulação de LR</h1>
-      <h2 class="project-tagline">Documentação do projeto da disciplina de Linguagens Formais e Compiladores 2018.2</h2>
+      <h2 class="project-tagline">Documentação do projeto da disciplina de Linguagens Formais e Compiladores da Universidade Federal de Santa Catarina - 2018.2</h2>
       {% if site.show_downloads %}
 	<a href="" class="btn">Github .com</a>
         <a href="" class="btn">Download .zip</a>
