--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
       <h1 class="project-name">Algoritmos para manipulação de LR</h1>
       <h2 class="project-tagline">Documentação do projeto da disciplina de Linguagens Formais e Compiladores da Universidade Federal de Santa Catarina - 2018.2</h2>
       {% if site.show_downloads %}
-	<a href="" class="btn">Github .com</a>
-        <a href="" class="btn">Download .zip</a>
+	<a href="https://github.com/christianpieri/INE5421" class="btn">Github .com</a>
+        <a href="https://github.com/christianpieri/INE5421/archive/master.zip" class="btn">Download .zip</a>
         <a href="" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
